@@ -75,3 +75,4 @@
    3-Jun-2024    V0.81 Update PfamProvider to use new Pfam mapping file
   20-Aug-2024    V0.82 Disable default backup to fallback setting in UniProtIdMappingProvider;
                        Update GlyGenProvider
+   9-Dec-2024    V0.83 Update Azure pipelines to use latest macOS, Ubuntu, and python 3.10
